--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 * {
   padding: 0;
   margin: 0;
+  color: #2E3436;
 }
 
 .App {
-  width: 800px;
-  margin: 0px auto;
-  padding: 30px;
-  background-color: #eee;
+  width: 100%;
+  padding: 100px;
+  background-color: #EEEEEC;
+  box-sizing: border-box;
+  overflow: hidden;
 }
