--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,8 +1,7 @@
-.about-header {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-transform: uppercase;
-    font-size: 16px;
-    margin-bottom: 20px;
+.header-title {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
 .aboutme {
@@ -10,4 +9,9 @@
     color: #111;
     font-size: 14px;
     line-height: 24px;
+    text-align: left;
+}
+
+.publications-list {
+    
 }
