--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,34 @@
-body {
+body, html {
   margin: 0;
+  height: 100%;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#overlay {
+  background-image: url('./img/ancient.jpg');
+  -webkit-filter: blur(3px);
+  filter: blur(3px);
+  height: 100%; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#root {
+  position: absolute;
+  z-index: 2;
+  top: 50%;
+  left: 50%;
+  width: 60%;
+  text-align: center;
+  background: #EEEEEC;
+  transform: translate(-50%, -50%);
+  /* padding: 40px; */
 }
 
 code {
